@@ -1,3 +1,14 @@
+2011-10-18  Damian Kaleta  <dkaleta@apple.com>
+
+        Add WebKit API to hide the definition window
+        https://bugs.webkit.org/show_bug.cgi?id=70345
+
+        Reviewed by Anders Carlsson.
+
+        * UIProcess/API/mac/WKView.mm:
+        (-[WKView hideWordDefinitionWindow]): Hides the definition window.
+        * UIProcess/API/mac/WKViewPrivate.h:
+
 2011-10-18  Adam Barth  <abarth@webkit.org>
 
         Always enable ENABLE(XPATH)
